--- a/style.scss
+++ b/style.scss
@@ -20,12 +20,13 @@ a {
 	padding: 0;
 	.logo {
 		display: flex;
-		justify-content: center;
+		justify-content: flex-start;
 		a {
 			background: url(./img/icons.png) no-repeat 0px -8.1rem;
 			width: 11rem;
 			height: 52px;
 			transform: scale(0.6);
+			margin-left: 2rem;
 		}
 	}
 	.search {
@@ -68,6 +69,128 @@ a {
 					position: relative;
 					top: 6px;
 				}
+			}
+		}
+	}
+}
+
+// ig body
+#ig-body {
+	background: var(--bs-gray-100);
+	height: 85vh;
+	#article {
+		.card {
+			overflow: hidden;
+			.card-list {
+				padding: 1rem 0.5rem;
+				padding-left: 1rem;
+				text-align: center;
+				img {
+					width: 70%;
+					border-radius: 50%;
+					border: 1px solid;
+					border-color: #f90a0a;
+				}
+				.card-text {
+					h5 {
+						margin-top: 0.2rem;
+						font-size: 0.8rem;
+						color: #646464;
+					}
+				}
+			}
+		}
+	}
+	#aside {
+		display: flex;
+		flex-direction: row;
+		justify-content: space-around;
+		align-items: center;
+		padding: 0.2rem 0.1rem;
+		margin-top: 2.3rem;
+		.auth-body {
+			display: flex;
+			.auth-img {
+				img {
+					width: 3.5rem;
+					height: 3.5rem;
+					border-radius: 50%;
+				}
+			}
+			h6 {
+				margin-top: 0.6rem;
+				font-size: 0.9rem;
+				color: #272727;
+			}
+			small {
+				font-size: 0.9rem;
+				position: relative;
+				top: 25px;
+				right: 47px;
+			}
+		}
+		.auth-footer a {
+			color: #2ca7f7;
+			font-size: 0.83rem;
+			margin-top: 0.6rem;
+			font-weight: 500;
+		}
+	}
+	.follow-area {
+		margin: 1.2rem 1rem;
+		.follow-left {
+			h5 {
+				font-size: 0.96rem;
+				color: #949494;
+				margin-bottom: 0.6rem;
+			}
+		}
+		.follow-right {
+			a {
+				color: #272727;
+				font-size: 0.83rem;
+				font-weight: 500;
+			}
+		}
+	}
+	.follow-people-area {
+		display: flex;
+		justify-content: space-around;
+		align-items: center;
+		.people-list {
+			display: flex;
+			img {
+				width: 2.4rem;
+				height: 2.4rem;
+				border-radius: 50%;
+				margin-top: 0.1rem;
+				margin-right: 0.8rem;
+			}
+		}
+		.people-desc {
+			h6 {
+				font-size: 0.9rem;
+				margin-bottom: -0.2rem;
+			}
+			small {
+				color: #a9a9a9;
+				font-size: 0.9rem;
+			}
+		}
+		.follow-link {
+			color: #2ca7f7;
+			font-size: 0.83rem;
+			font-weight: 500;
+		}
+	}
+	.direct-link {
+		margin: 1rem 1rem;
+		a {
+			color: #a9a9a9;
+			font-size: 0.73rem;
+			font-weight: 400;
+			i {
+				font-size: 0.5rem;
 			}
 		}
 	}
