--- a/style.scss
+++ b/style.scss
@@ -77,7 +77,7 @@ a {
 // ig body
 #ig-body {
 	background: var(--bs-gray-100);
-	height: 85vh;
+	height: 100vh;
 	#article {
 		.card {
 			overflow: hidden;
@@ -86,6 +86,7 @@ a {
 				padding-left: 1rem;
 				text-align: center;
 				img {
+					cursor: pointer;
 					width: 70%;
 					border-radius: 50%;
 					border: 1px solid;
@@ -96,6 +97,97 @@ a {
 						margin-top: 0.2rem;
 						font-size: 0.8rem;
 						color: #646464;
+					}
+				}
+			}
+		}
+		.post-area {
+			.card {
+				.card-head {
+					padding: 0.5rem;
+					display: flex;
+					justify-content: space-between;
+					img {
+						width: 2.2rem;
+						height: 2.2rem;
+						border-radius: 50%;
+						border: 1px solid;
+						border-color: #f90a0a;
+					}
+					span {
+						font-size: 0.8rem;
+						font-weight: 600;
+						margin-left: 0.3rem;
+					}
+				}
+				.card-body {
+					padding: 0;
+					padding-bottom: 0.5rem;
+					img {
+						width: 100%;
+						height: 23rem;
+					}
+					.card-icon-area {
+						display: flex;
+						justify-content: space-between;
+						padding: 0.5rem;
+						.card-react,
+						.card-save {
+							i {
+								font-size: 1.2rem;
+								margin-right: 0.3rem;
+								font-weight: 600;
+								color: #333333;
+								cursor: pointer;
+							}
+						}
+					}
+					.react-count {
+						font-size: 0.8rem;
+						color: #333;
+						padding-left: 0.6rem;
+					}
+					.react-time {
+						font-size: 0.8rem;
+						color: #949aae;
+						padding-left: 0.6rem;
+					}
+					hr {
+						height: 0.1rem;
+						color: #e1dfdf;
+					}
+					.comment {
+						display: flex;
+						justify-content: space-between;
+						align-items: center;
+						padding: 0rem 0.5rem;
+						.comment-write {
+							flex-grow: 1;
+							i {
+								font-size: 1.3rem;
+							}
+							input {
+								font-size: 0.9rem;
+								padding: 0 0.4rem;
+								outline: none;
+								border: none;
+								width: 64%;
+								position: relative;
+								bottom: 0.2rem;
+								&::placeholder {
+									color: #949aae;
+									font-weight: 400;
+								}
+							}
+						}
+						.comment-btn {
+							button {
+								color: #0d6efd;
+								border: none;
+								outline: none;
+								background: transparent;
+							}
+						}
 					}
 				}
 			}
@@ -186,6 +278,7 @@ a {
 	.direct-link {
 		margin: 1rem 1rem;
 		a {
+			text-transform: capitalize;
 			color: #a9a9a9;
 			font-size: 0.73rem;
 			font-weight: 400;
