--- a/style.scss
+++ b/style.scss
@@ -16,6 +16,7 @@ a {
 
 // ig header
 #ig-header {
+	background: #fff;
 	display: flex;
 	padding: 0;
 	.logo {
@@ -76,8 +77,8 @@ a {
 
 // ig body
 #ig-body {
-	background: var(--bs-gray-100);
-	height: 100vh;
+	background: #f8f9fa;
+	height: 100%;
 	#article {
 		.card {
 			overflow: hidden;
@@ -121,6 +122,7 @@ a {
 					}
 				}
 				.card-body {
+					border: none;
 					padding: 0;
 					padding-bottom: 0.5rem;
 					img {
@@ -143,6 +145,16 @@ a {
 						}
 					}
 					.react-count {
+						font-weight: 400;
+						font-size: 0.8rem;
+						color: #333;
+						padding-left: 0.6rem;
+					}
+					.react-content {
+						b {
+							font-weight: 600;
+							color: #333;
+						}
 						font-size: 0.8rem;
 						color: #333;
 						padding-left: 0.6rem;
@@ -193,15 +205,19 @@ a {
 			}
 		}
 	}
+	.top-stick {
+		position: fixed;
+		z-index: 1010;
+		top: 5.8rem;
+		right: auto;
+	}
 	#aside {
 		display: flex;
-		flex-direction: row;
-		justify-content: space-around;
 		align-items: center;
 		padding: 0.2rem 0.1rem;
-		margin-top: 2.3rem;
 		.auth-body {
 			display: flex;
+			flex-grow: 0.4;
 			.auth-img {
 				img {
 					width: 3.5rem;
@@ -229,8 +245,12 @@ a {
 		}
 	}
 	.follow-area {
-		margin: 1.2rem 1rem;
+		display: flex;
+		margin: 1.2rem 0rem;
 		.follow-left {
+			display: flex;
+			align-items: center;
+			flex-grow: 0.56;
 			h5 {
 				font-size: 0.96rem;
 				color: #949494;
@@ -247,10 +267,10 @@ a {
 	}
 	.follow-people-area {
 		display: flex;
-		justify-content: space-around;
 		align-items: center;
 		.people-list {
 			display: flex;
+			flex-grow: 0.52;
 			img {
 				width: 2.4rem;
 				height: 2.4rem;
@@ -276,7 +296,7 @@ a {
 		}
 	}
 	.direct-link {
-		margin: 1rem 1rem;
+		padding-right: 1rem;
 		a {
 			text-transform: capitalize;
 			color: #a9a9a9;
